[gd_scene load_steps=3 format=3 uid="uid://peig6qx4hm48"]

[ext_resource type="Script" path="res://scenes/hud/level6/task_6_2.gd" id="1_2oq3j"]
[ext_resource type="FontFile" uid="uid://c15qulsl5wbmb" path="res://assets/fonts/RussoOne-Regular.ttf" id="2_dcy0u"]

[node name="Task1" type="CanvasLayer"]
script = ExtResource("1_2oq3j")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1915.0
offset_bottom = 1084.0
color = Color(0.215686, 0.458824, 0.27451, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -785.0
offset_top = -316.0
offset_right = 778.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dcy0u")
theme_override_font_sizes/font_size = 42
text = "Это важная подсказка. Если разгадаете этот шифр то сможете выжить
(попробуй использовать очень известный шифр, начинается на ц)
зуонщ чскзё монув, чхцёзё чткцшв"

[node name="Label2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -788.0
offset_top = 280.0
offset_right = 983.0
offset_bottom = 447.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_dcy0u")
theme_override_font_sizes/font_size = 40

[node name="Button3" type="Button" parent="."]
offset_left = 663.0
offset_top = 721.0
offset_right = 1156.0
offset_bottom = 812.0
theme_override_fonts/font = ExtResource("2_dcy0u")
theme_override_font_sizes/font_size = 35
text = "идти дальше"

[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
